--- a/tasks/prepare.yml
+++ b/tasks/prepare.yml
@@ -18,7 +18,7 @@
         - default.yaml
       skip: true
 
-- name: assert wrong influxdb version ({{ influxdb_version }})
+- name: assert wrong influxdb version
   assert:
     that:
       - influxdb_main_version | int == 2
@@ -173,16 +173,7 @@
 - name: merge influxdb configuration between defaults and custom
   set_fact:
     influxdb_service: "{{ influxdb_defaults_service | combine( influxdb_service, recursive=True ) }}"
-    influxdb_primary: "{{ influxdb_defaults_primary | combine( influxdb_primary, recursive=True ) }}"
     influxdb_exists: "{{ stat_influxdb_binary.stat.exists }}"
     influxdb_client_exists: "{{ stat_influx_client_binary.stat.exists }}"
-    # influxdb_admin: "{{ influxdb_defaults_admin | combine( influxdb_admin, recursive=True ) }}"
-    # influxdb_config_global: "{{ influxdb_defaults_config_global | combine( influxdb_config_global, recursive=True ) }}"
-    # influxdb_config_graphite: "{{ influxdb_defaults_config_graphite | combine( influxdb_config_graphite, recursive=True ) }}"
-    # influxdb_config_collectd: "{{ influxdb_defaults_config_collectd | combine( influxdb_config_collectd, recursive=True ) }}"
-    # influxdb_config_udp: "{{ influxdb_defaults_config_udp | combine( influxdb_config_udp, recursive=True ) }}"
-    # influxdb_config_meta: "{{ influxdb_defaults_config_meta | combine( influxdb_config_meta, recursive=True ) }}"
-    # influxdb_config_http: "{{ influxdb_defaults_config_http | combine( influxdb_config_http, recursive=True ) }}"
-    # influxdb_config_data: "{{ influxdb_defaults_config_data | combine( influxdb_config_data, recursive=True ) }}"
 
 ...
