--- a/.github/workflows/galaxy.yml
+++ b/.github/workflows/galaxy.yml
@@ -1,6 +1,6 @@
 ---
 
-name: Galaxy
+name: push to ansible galaxy
 
 on:
   workflow_dispatch:
@@ -16,7 +16,7 @@ jobs:
   galaxy:
     name: galaxy
     runs-on: ubuntu-20.04
-    if: ${{ github.event_name == 'schedule' || github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Check out the codebase
         uses: actions/checkout@v2
