--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -1,3 +1,6 @@
 ---
-influxdb_apt_url: "deb https://repos.influxdata.com/debian {{ ansible_distribution_release }} stable"
-influxdb_apt_key: https://repos.influxdata.com/influxdb.key
+
+influxdb_requirements:
+  - iproute2
+
+...
