add artixlinux to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       matrix:
         image:
           - archlinux:latest
-          # - artixlinux:latest
+          - artixlinux:latest
         ansible-version:
           - '5.1'
           - '6.1'
