--- a/tasks/prepare.yml
+++ b/tasks/prepare.yml
@@ -69,6 +69,9 @@
     - name: set influxdb version to {{ _latest_release.json.tag_name[1:] }}
       set_fact:
         influxdb_version: "{{ _latest_release.json.tag_name[1:] }}"
+  delegate_to: localhost
+  become: false
+  run_once: true
   when:
     - influxdb_version == "latest"
 
