--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,7 +8,7 @@ galaxy_info:
   description: Install and configures InfluxDB2
 
   license: Apache-2.0
-  min_ansible_version: 2.10
+  min_ansible_version: "2.10"
 
   platforms:
     - name: ArchLinux
@@ -16,6 +16,7 @@ galaxy_info:
       versions:
         - buster
         - bullseye
+
   galaxy_tags:
     - influxdb
     - metrics
