--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,21 +1,21 @@
 ---
 
 - name: prepare
-  include_tasks: prepare.yml
+  ansible.builtin.include_tasks: prepare.yml
 
 - name: download archives
-  include_tasks: download.yml
+  ansible.builtin.include_tasks: download.yml
   when:
     - not influxdb_exists or
       not influxdb_client_exists
 
 - name: install
-  include_tasks: install.yml
+  ansible.builtin.include_tasks: install.yml
 
 - name: configure
-  include_tasks: configure/main.yml
+  ansible.builtin.include_tasks: configure/main.yml
 
 - name: service
-  include_tasks: service.yml
+  ansible.builtin.include_tasks: service.yml
 
 ...
