--- a/tasks/prepare.yml
+++ b/tasks/prepare.yml
@@ -20,15 +20,6 @@
         - default.yaml
       skip: true
 
-- name: assert wrong influxdb version
-  ansible.builtin.assert:
-    that:
-      - influxdb_main_version | int == 2
-    msg:
-      - this role handle only influxdb2
-      - for influxdb1 support, please use  mkayontour.ansible-influxdb
-    quiet: true
-
 - name: update package cache
   ansible.builtin.package:
     update_cache: true
@@ -57,23 +48,28 @@
     - influxdb_version == "latest"
   block:
     - name: get latest release
-      ansible.builtin.uri:
-        url: "https://api.github.com/repos/influxdata/influxdb/releases/latest"
-        method: GET
-        return_content: true
-        status_code: 200
-        body_format: json
-        validate_certs: false
+      delegate_to: localhost
+      become: false
+      run_once: true
+      github_latest:
+        project: influxdata
+        repository: influxdb
         user: "{{ lookup('env', 'GH_USER') | default(omit) }}"
         password: "{{ lookup('env', 'GH_TOKEN') | default(omit) }}"
-      # no_log: "{{ not lookup('env', 'ANSIBLE_DEBUG') | bool }}"
       register: _latest_release
-      until: _latest_release.status == 200
-      retries: 5
 
-    - name: set influxdb version to {{ _latest_release.json.tag_name[1:] }}
+    - name: re-define influxdb_version
       ansible.builtin.set_fact:
-        influxdb_version: "{{ _latest_release.json.tag_name[1:] }}"
+        influxdb_version: "{{ _latest_release.latest_release }}"
+
+- name: assert wrong influxdb version
+  ansible.builtin.assert:
+    that:
+      - influxdb_main_version | int == 2
+    msg:
+      - this role handle only influxdb2
+      - for influxdb1 support, please use  mkayontour.ansible-influxdb
+    quiet: true
 
 - name: detect our installation path '{{ influxdb_install_path | dirname }}'
   ansible.builtin.stat:
