--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -1,20 +1,21 @@
 ---
-- name: prepare container
+
+- name: information
   hosts: all
   gather_facts: true
 
-  environment:
-    NETRC: ''
-
   pre_tasks:
     - name: arch- / artixlinux
+      when:
+        - ansible_distribution | lower == 'archlinux' or
+          ansible_os_family | lower == 'artix linux'
       block:
         - name: update pacman system
-          command: |
+          ansible.builtin.command: |
             pacman --refresh --sync --sysupgrade --noconfirm
 
         - name: create depends service
-          copy:
+          ansible.builtin.copy:
             mode: 0755
             dest: /etc/init.d/net
             content: |
@@ -23,16 +24,20 @@
           when:
             - ansible_os_family | lower == 'artix linux'
 
-      when:
-        - ansible_distribution | lower == 'archlinux' or
-          ansible_os_family | lower == 'artix linux'
-
-    - debug:
+    - name: environment
+      ansible.builtin.debug:
         msg:
           - "os family            : {{ ansible_distribution }} ({{ ansible_os_family }})"
           - "distribution version : {{ ansible_distribution_major_version }}"
           - "ansible version      : {{ ansible_version.full }}"
           - "python version       : {{ ansible_python.version.major }}.{{ ansible_python.version.minor }}"
+
+- name: prepare container
+  hosts: all
+  gather_facts: true
+
+  environment:
+    NETRC: ''
 
   roles:
     - role: syslog-ng
