--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -84,10 +84,16 @@
         group: root
         mode: 0750
 
-- name: create local facts
-  ansible.builtin.template:
-    src: ansible_facts.j2
-    dest: /etc/ansible/facts.d/influxdb.fact
-    mode: 0755
+- name: create custom fact file
+  bodsch.core.facts:
+    name: influxdb
+    facts:
+      version: "{{ influxdb_version }}"
+
+# - name: create local facts
+#   ansible.builtin.template:
+#     src: ansible_facts.j2
+#     dest: /etc/ansible/facts.d/influxdb.fact
+#     mode: 0755
 
 ...
