--- a/tasks/prepare.yml
+++ b/tasks/prepare.yml
@@ -51,7 +51,7 @@
       delegate_to: localhost
       become: false
       run_once: true
-      github_latest:
+      bodsch.scm.github_latest:
         project: influxdata
         repository: influxdb
         user: "{{ lookup('env', 'GH_USER') | default(omit) }}"
@@ -162,14 +162,6 @@
     group: "{{ influxdb_system_group }}"
     mode: 0755
     recurse: true
-
-- name: create ansible local facts directory
-  ansible.builtin.file:
-    dest: /etc/ansible/facts.d
-    state: directory
-    owner: root
-    group: root
-    mode: 0775
 
 - name: merge influxdb configuration between defaults and custom
   ansible.builtin.set_fact:
